responsive for forgetPW, forgetpw-ver, registration, and resetPW for Patient Module

--- a/Patient Module/registration.html
+++ b/Patient Module/registration.html
@@ -44,8 +44,8 @@
                 <button name="loginButton" id="register" class="buttonLogin">Continue</button>
             </div>
             <div class="terms">
-                <input type="radio" name="readT&C" value="" required>
-                <p>I have read and accept the<a href="#" id="forgot_pswd"> Terms & Condition</a></p>
+                <input type="radio" class="termsRadio" name="readT&C" value="" required>
+                <p class="readTC">I have read and accept the<a href="#" id="forgot_pswd"> Terms & Condition</a></p>
             </div>
         </form>
     </div>
