--- a/Patient Module/resetPW.html
+++ b/Patient Module/resetPW.html
@@ -19,15 +19,15 @@
 
 <body>
     <h1 class="logInToText">Reset Password</h1>
-    <div id="resetPasContainer">
+    <div id="login-form">
         <img src="../img/SMIT+.png" class="logo" alt="">
         <div>
-            <p>
-                <center>Please enter your username</center>
+            <p class="instructionText">
+               Please enter your username
             </p>
-            <input type="text" id="resetReq1" name="pw1" placeholder='Username'><br>
+            <input type="text" id="pin" name="pw1" placeholder='Username'><br>
         </div>
-        <input type="submit" id="resetbutton" value="Continue">
+        <input type="submit" class="continueBtn" value="Continue">
     </div>
 </body>
 
