--- a/Patient Module/forgetPW-ver.html
+++ b/Patient Module/forgetPW-ver.html
@@ -28,8 +28,8 @@
         <h3 class="logInToText pt-5">Verify your Account</h3>
         <form id="login-form" class="form" action="EmployeeLoginAuthentication.php" method="post">
             <img src="../img/SMIT+.png" class="logo" alt="">
-            <p>
-                <center>Enter the 4 digit pin sent to your Mobile Number</center>
+            <p class="instructionText">
+                Enter the 4 digit pin sent to your Mobile Number
             </p>
             <input type="text" id="pin" name="pin" maxlength="4" size="4">
 
