updated personnel modal

--- a/Admin/ManageUsers/managePersonnel2.html
+++ b/Admin/ManageUsers/managePersonnel2.html
@@ -317,7 +317,7 @@
         // add button after input of personnel basic info
         next.onclick = function() {
             modal.style.display = "none";
-            addModal.style.display = "block"
+            addModal.style.display = "block";
         }
 
         save.onclick = function() {
