updated patient modal

--- a/Admin/ManageUsers/ManagePatient2.html
+++ b/Admin/ManageUsers/ManagePatient2.html
@@ -115,7 +115,7 @@
 
                     <div class="modal-body">
                         <div class="row">
-                            <div class="column" id="upload-content">
+                            <div class="col-sm" id="upload-content">
                                 <div class="browseButton">
                                     <button class="button" id="iconBrowse"><i class="fas fa-file-upload"></i></button>
                                     <input type="file" name="file"/>
@@ -130,7 +130,7 @@
                                 <input type="file" class="form-control" id="fileUpload" multiple/>
                                 <button id="browse" type="button" class="'button4 btn-primary"> Browse </button> -->
                             </div>
-                            <div class="column">
+                            <div class="col-sm">
                             <!--temporary uploading-->
                             <h6> Uploaded Files </h6>
                                 <p> prereg_09-19-2021_validates.csv</p>
@@ -198,6 +198,9 @@
 
                             <label for="state">State/Province</label><br>
                             <input type="text3" id="state" class='input' name="state" placeholder="Input State/Province">
+
+                            <label for="barangay">Barangay</label>
+                            <input type="text3" id="barangay" class='input' name="barangay" placeholder="Input Barangay">
 
                             <label for="postal">Postal/Zip Code</label><br>
                             <input type="text3" id="postal" class='input' name="postal" placeholder="Input Postal/Zip Code">
