fixed some css to personnel module

--- a/Personnel Module/aboutPersonnel.html
+++ b/Personnel Module/aboutPersonnel.html
@@ -41,19 +41,19 @@
                     <a href="#"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fas fa-syringe"></i> Manage Vaccine</a>
+                    <a href="../Personnel Module/ManageVaccinePersonnel.php"><i class="fas fa-syringe"></i> Manage Vaccine</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fas fa-users"></i> Manage Patient</a>
+                    <a href="../Personnel Module/ManageVaccinePersonnel.php"><i class="fas fa-users"></i> Manage Patient</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fas fa-truck"></i> View Deployment</a>
-                </li>
-                <li>
-                    <a href="#"><i class="fas fa-sticky-note"></i> Reports</a>
+                    <a href="../Personnel Module/ViewDeploymentPersonnel.html"><i class="fas fa-truck"></i> View Deployment</a>
                 </li>
                 <li class="active">
-                    <a href="#"><i class="fas fa-question"></i> About</a>
+                    <a href="../Personnel Module/ManageReportPersonnel.php"><i class="fas fa-sticky-note"></i> Reports</a>
+                </li>
+                <li>
+                    <a href="../Personnel Module/aboutPersonnel.html"><i class="fas fa-question"></i> About</a>
                 </li>
             </ul>
 
