Fixed Add health district button. Added AboutAdmin.html in href tag for nav bar

--- a/AdminBackEnd/aboutAdmin.html
+++ b/AdminBackEnd/aboutAdmin.html
@@ -37,31 +37,31 @@
 
             <ul class="list-unstyled components">
                 <p id="mainmenu">Main Menu</p>
-                <li class="active">
+                <li>
                     <a href="#"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fas fa-syringe"></i> Manage Vaccine</a>
+                    <a href="ManageVaccineHome.php"><i class="fas fa-syringe"></i> Manage Vaccine</a>
                 </li>
                 <li>
                     <a href="#ManageUsersSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fas fa-users"></i> Manage Users</a>
                     <ul class="collapse list-unstyled" id="ManageUsersSubmenu">
                         <li>
-                            <a href="#">Personnel</a>
+                            <a href="ManagePersonnelHome.php">Personnel</a>
                         </li>
                         <li>
-                            <a href="#">Patients</a>
+                            <a href="ManagePatientHome.php">Patients</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#"><i class="fas fa-truck"></i> Manage Deployment</a>
+                    <a href="ManageDeployment.php"><i class="fas fa-truck"></i> Manage Deployment</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fas fa-sticky-note"></i> Reports</a>
+                    <a href="ManageReportHome.php"><i class="fas fa-sticky-note"></i> Reports</a>
                 </li>
-                <li>
-                    <a href="#"><i class="fas fa-question"></i> About</a>
+                <li class="active">
+                    <a href="aboutAdmin.html"><i class="fas fa-question"></i> About</a>
                 </li>
             </ul>
 
