--- a/Admin/ManageUsers/managePersonnel2.html
+++ b/Admin/ManageUsers/managePersonnel2.html
@@ -155,9 +155,11 @@
                         <div class="AddNewPersonnel-PopUp">
                             <h5> Basic Information</h5>
                             <div class="row">
-                                <div class="col-sm">
-                                    <label for="lname">Last Name</label>
-                                    <input type="text3" id="lname" class='input' name="lastname" placeholder="Input Last Name"><br>
+                                <div class="col-4 col-sm-4">
+                                    <div class="form-group">
+                                        <label for="lname">Last Name</label>
+                                        <input type="text3" id="lname" class='input' name="lastname" placeholder="Input Last Name"><br>
+                                    </div>
 
                                     <label for="fname">First Name</label><br>
                                     <input type="text3" id="fname" class='input' name="firstname" placeholder="Input First Name"><br>
