Updated SSD Module

--- a/Ssd Module/distributeStubSsdModule.html
+++ b/Ssd Module/distributeStubSsdModule.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title -->
-  <title> Stub Distribution - Special Service Division </title>
-  <!--Favicon-->
+  <title>SMIT+(Ssd) | Stub Distribute</title>
+
   <link rel="icon" href="../img/FaviSMIT+.png" type="image/jpg">
   <!-- Our Custom CSS -->
-  <link href="../css/SSDStyle.css" rel="stylesheet">
+  <link href="../css/style.css" rel="stylesheet">
 
   <!-- Bootstrap-->
   <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -29,6 +29,8 @@
   <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
           integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
           crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -42,15 +44,16 @@
     </div>
 
     <ul class="list-unstyled components">
-      <h7> Special Service Division</h7>
-      <h7> Spectember</h7>
+      <h4 id="headingNav1"> Special Service Division</h4>
+      <hr>
+      <h5 id="headingNav2"> September 17, 2021 | 01:24 PM</h5>
+      <hr>
 
-      <li>
-        <a href="homeSsdModule.html"><i class="fas fa-home"></i> Home</a>
+      <li class="active">
+        <a href="homeSsdModule.html"><i class="fas fa-home"></i>  Home</a>
       </li>
-
       <li>
-        <a href="distributeStubSsdModule.html"><i class="fas fa-ticket-alt"></i> Stub Distribute</a>
+        <a href="distributeStubSsdModule.html"><i class="fas fa-ticket-alt"></i>  Stub Distribute</a>
       </li>
     </ul>
     <ul class="list-unstyled CTAs">
