--- a/Ssd Module/homeSsdModule.html
+++ b/Ssd Module/homeSsdModule.html
@@ -10,7 +10,7 @@
 
   <link rel="icon" href="../img/FaviSMIT+.png" type="image/jpg">
   <!-- Our Custom CSS -->
-  <link href="../css/style.css" rel="stylesheet">
+  <link href="../css/ssdStyle.css" rel="stylesheet">
 
   <!-- Bootstrap-->
   <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
