--- a/Ssd Module/homeSsdModule.html
+++ b/Ssd Module/homeSsdModule.html
@@ -21,6 +21,7 @@
           src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
+
   <!-- Font Awesome JS -->
   <script src="https://kit.fontawesome.com/fcdb0fe9f3.js" crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
@@ -63,8 +64,9 @@
     </ul>
   </nav>
 
-  <!-- Top Nav Bar  -->
+  <!-- Whole Page  -->
   <div id="content">
+    <!-- Top Nav Bar  -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
 
@@ -81,6 +83,51 @@
         </button>
       </div>
     </nav>
+
+    <!-- Page Content  -->
+    <div class="row">
+      <div id="totalPopulation">
+        <center> <h5> Total Vaccinated Population </h5></center>
+        <center> <h8> As of September 16, 2021</h8></center>
+        <hr>
+        <p> <center>96,815 / 281,000 </center>  </p>
+      </div>
+
+      <div id="vaccineDeployments">
+        <h5> <center> Vaccine Deployments </center> </h5>
+        <hr>
+        <div id="vaccineDeploymentContent">
+          <h4> September 21 , 2021 </h4>
+          <p> Dose: First Dose </p>
+          <p> Site: SLU Gym, UB Gym, Country Club </p>
+          <p> Brand: SINOVAC </p>
+          <p> Priority Group per site: </p>
+          <ul>
+            <li> A4 : 600 stubs</li>
+            <li> A5 : 400 stubs </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="row healthDistrict">
+      <div id="totalPopulationPerHD">
+        <center> <h5> Total Vaccinated Population per Health District</h5> </center>
+        <center> <h8> As of September 16, 2021 </h8></center>
+       <hr>
+        <div class="row">
+          <div class="col healthDistrict">
+            Asin Health District
+          </div>
+          <div class="col healthDistrict">
+            1000
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
 
   </div>
 </div>
