updated the stub distribution page of the SSD module (Send Stub modal)

--- a/Ssd Module/distributeStubSsdModule.html
+++ b/Ssd Module/distributeStubSsdModule.html
@@ -122,9 +122,12 @@
                 </button>
             </div>
 
+
             <div id="deploymentQueue">
                 <div class="labels">
                     <h2>Deployment Queue</h2>
+                    <p> QUEZON HILL HEALTH DISTRICT CENTER - Deployment 4</p>
+                    <p> IRISAN HEALTH DISTRICT CENTER - Deployment 5</p>
                 </div>
 
             </div>
@@ -140,16 +143,61 @@
 
                 <div class="modal-body">
                     <div class="stubNumbersContainer">
-                        <!--First Row -->
                         <div class="row">
                             <div class="col">
-                                <p> BARANGAY LIST </p>
+                                <center> <h6> BARANGAY LIST </h6> </center>
                             </div>
                             <div class="col">
-                                <p> Enter the number of stubs per Category</p>
+                               <center> <h6> Enter the number of stubs per Category</h6> </center>
                             </div>
                         </div>
+                        <table class="table table-borderless">
+                            <thead>
+                            <tr>
+                                <th scope="col">Covered Barangays</th>
+                                <th scope="col">A1</th>
+                                <th scope="col">A2</th>
+                                <th scope="col">A3</th>
+                                <th scope="col">A4</th>
+                                <th scope="col">A5</th>
+                                <th scope="col">A6</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <th scope="row"> Bakakeng Norte </th>
+                                <td> <input type="number" min="0" max="100"></td>
+                                <td> <input type="number" min="0" max="100"></td>
+                                <td> <input type="number" min="0" max="100"></td>
+                                <td> <input type="number" min="0" max="100"></td>
+                                <td> <input type="number" min="0" max="100"></td>
+                                <td> <input type="number" min="0" max="100"></td>
+                            </tr>
+                            <tr>
+                                <th scope="row"> Bakakeng Central </th>
+                                <td> <input type="number" min="0" max="100"></td>
+                                <td> <input type="number" min="0" max="100"></td>
+                                <td> <input type="number" min="0" max="100"></td>
+                                <td> <input type="number" min="0" max="100"></td>
+                                <td> <input type="number" min="0" max="100"></td>
+                                <td> <input type="number" min="0" max="100"></td>
+                            </tr>
+                            <tr>
+                                <th scope="row"> Bakakeng Sur </th>
+                                <td> <input type="number" min="0" max="100"></td>
+                                <td> <input type="number" min="0" max="100"></td>
+                                <td> <input type="number" min="0" max="100"></td>
+                                <td> <input type="number" min="0" max="100"></td>
+                                <td> <input type="number" min="0" max="100"></td>
+                                <td> <input type="number" min="0" max="100"></td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="submit" class="btn btn-primary"> Done </button>
                 </div>
             </div>
         </div>
