updated the pages of the SSD module

--- a/Ssd Module/homeSsdModule.html
+++ b/Ssd Module/homeSsdModule.html
@@ -86,50 +86,57 @@
 
     <!-- Page Content  -->
     <div class="row">
-      <div id="totalPopulation">
-        <center> <h5> Total Vaccinated Population </h5></center>
-        <center> <h8> As of September 16, 2021</h8></center>
-        <hr>
-        <p> <center>96,815 / 281,000 </center>  </p>
-      </div>
-
-      <div id="vaccineDeployments">
-        <h5> <center> Vaccine Deployments </center> </h5>
-        <hr>
-        <div id="vaccineDeploymentContent">
-          <h4> September 21 , 2021 </h4>
-          <p> Dose: First Dose </p>
-          <p> Site: SLU Gym, UB Gym, Country Club </p>
-          <p> Brand: SINOVAC </p>
-          <p> Priority Group per site: </p>
-          <ul>
-            <li> A4 : 600 stubs</li>
-            <li> A5 : 400 stubs </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="row healthDistrict">
-      <div id="totalPopulationPerHD">
-        <center> <h5> Total Vaccinated Population per Health District</h5> </center>
-        <center> <h8> As of September 16, 2021 </h8></center>
-       <hr>
+      <div class="col">
         <div class="row">
-          <div class="col healthDistrict">
-            Asin Health District
-          </div>
-          <div class="col healthDistrict">
-            1000
+          <div id="totalPopulation">
+            <center><h5> Total Vaccinated Population </h5></center>
+            <center>
+              <h8> As of September 16, 2021</h8>
+            </center>
+            <hr>
+            <p>
+            <center>96,815 / 281,000</center>
+            </p>
           </div>
         </div>
 
+        <div class="row healthDistrict">
+          <div id="totalPopulationPerHD">
+            <center><h5> Total Vaccinated Population per Health District</h5></center>
+            <center>
+              <h8> As of September 16, 2021</h8>
+            </center>
+            <hr>
+            <div class="row">
+              <div class="col healthDistrict">
+                Asin Health District
+              </div>
+              <div class="col healthDistrict">
+                1000
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div id="vaccineDeployments">
+          <h5> <center> Vaccine Deployments </center> </h5>
+          <hr>
+          <div id="vaccineDeploymentContent">
+            <h4> September 21 , 2021 </h4>
+            <p> Dose: First Dose </p>
+            <p> Site: SLU Gym, UB Gym, Country Club </p>
+            <p> Brand: SINOVAC </p>
+            <p> Priority Group per site: </p>
+            <ul>
+              <li> A4 : 600 stubs</li>
+              <li> A5 : 400 stubs </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
-
-
-
-  </div>
 </div>
 
 
