--- a/Ssd Module/distributeStubSsdModule.html
+++ b/Ssd Module/distributeStubSsdModule.html
@@ -84,154 +84,167 @@
 
         <!-- Page Content  -->
         <div class="row">
-            <div id="selectDeployment">
-                <select>
-                    <option value="" disabled selected hidden>Select Deployment</option>
-                    <option value="">Select...</option>
-                    <option value="deployment1">Deployment1 </option>
-                    <option value="deployment2">Deployment2 </option>
-                    <option value="deployment3">Deployment3 </option>
-                    <option value="deployment4">Deployment4 </option>
-                </select>
-            </div>
-
-            <div id="deploymentSummary">
-                <div class="labels">
-                    <h2>Deployment Summary</h2>
-                    <p> Schedule: </p>
-                    <p> Site: </p>
-                    <p> Brand: </p>
+            <div class="col">
+                <div class="row">
+                    <div id="selectDeployment">
+                        <select>
+                            <option value="" disabled selected hidden>Select Deployment</option>
+                            <option value="">Select...</option>
+                            <option value="deployment1">Deployment1</option>
+                            <option value="deployment2">Deployment2</option>
+                            <option value="deployment3">Deployment3</option>
+                            <option value="deployment4">Deployment4</option>
+                        </select>
+                    </div>
                 </div>
-            </div>
-        </div>
-
-        <div class="row healthDistrict">
-            <div id="healthDistrictContainer">
-                <h2 class="labels"> Health Center Districts: </h2>
-                <table class="table table-hover">
-                    <tbody>
-                    <tr>
-                        <th scope="row" class="barangay"> ATAB HEALTH DISTRICT </th>
-                    </tr>
-                    <tr>
-                        <th scope="row"> AURORA HILL HEALTH DISTRICT </th>
-                    </tr>
-                    <tr>
-                        <th scope="row"> IRISAN HEALTH DISTRICT </th>
-                    </tr>
-                    </tbody>
-                </table>
-
-                <button id="sendStubs" type="button" class="btn btn-success"><i
-                        class="fas fa-paper-plane"></i> Send Stubs
-                </button>
-            </div>
-
-
-            <div id="deploymentQueue">
-                <div class="labels">
-                    <h2>Deployment Queue</h2>
-                    <p> QUEZON HILL HEALTH DISTRICT CENTER - Deployment 4</p>
-                    <p> IRISAN HEALTH DISTRICT CENTER - Deployment 5</p>
-                </div>
-
-            </div>
-        </div>
-
-        <div id="barangayModal" class="modal-window">
-            <div class="content-modal">
-                <div class="modal-header">
-                    <!--Name of the Health center associated with the barangay under-->
-                    <h3> ATAB HEALTH DISTRICT CENTER - Deployment 1 </h3>
-                    <span id="closeModal" class="close">&times;</span>
-                </div>
-
-                <div class="modal-body">
-                    <div class="stubNumbersContainer">
-                        <div class="row">
-                            <div class="col">
-                                <center> <h6> BARANGAY LIST </h6> </center>
-                            </div>
-                            <div class="col">
-                               <center> <h6> Enter the number of stubs per Category</h6> </center>
-                            </div>
-                        </div>
-                        <table class="table table-borderless">
-                            <thead>
-                            <tr>
-                                <th scope="col">Covered Barangays</th>
-                                <th scope="col">A1</th>
-                                <th scope="col">A2</th>
-                                <th scope="col">A3</th>
-                                <th scope="col">A4</th>
-                                <th scope="col">A5</th>
-                                <th scope="col">A6</th>
-                            </tr>
-                            </thead>
+                <div class="row healthDistrict">
+                    <div id="healthDistrictContainer">
+                        <h2 class="labels"> Health Center Districts: </h2>
+                        <table class="table table-hover">
                             <tbody>
                             <tr>
-                                <th scope="row"> Bakakeng Norte </th>
-                                <td> <input type="number" min="0" max="100"></td>
-                                <td> <input type="number" min="0" max="100"></td>
-                                <td> <input type="number" min="0" max="100"></td>
-                                <td> <input type="number" min="0" max="100"></td>
-                                <td> <input type="number" min="0" max="100"></td>
-                                <td> <input type="number" min="0" max="100"></td>
+                                <th scope="row" class="barangay"> ATAB HEALTH DISTRICT</th>
+                                <th scope="row">
+                                    <button id="firstBarangay" class="btn btn-info"> ALLOCATE</button>
+                                </th>
                             </tr>
                             <tr>
-                                <th scope="row"> Bakakeng Central </th>
-                                <td> <input type="number" min="0" max="100"></td>
-                                <td> <input type="number" min="0" max="100"></td>
-                                <td> <input type="number" min="0" max="100"></td>
-                                <td> <input type="number" min="0" max="100"></td>
-                                <td> <input type="number" min="0" max="100"></td>
-                                <td> <input type="number" min="0" max="100"></td>
+                                <th scope="row"> AURORA HILL HEALTH DISTRICT</th>
+                                <th scope="row">
+                                    <button id="secondBarangay" class="btn btn-info"> ALLOCATE</button>
+                                </th>
                             </tr>
                             <tr>
-                                <th scope="row"> Bakakeng Sur </th>
-                                <td> <input type="number" min="0" max="100"></td>
-                                <td> <input type="number" min="0" max="100"></td>
-                                <td> <input type="number" min="0" max="100"></td>
-                                <td> <input type="number" min="0" max="100"></td>
-                                <td> <input type="number" min="0" max="100"></td>
-                                <td> <input type="number" min="0" max="100"></td>
+                                <th scope="row"> IRISAN HEALTH DISTRICT</th>
+                                <th scope="row">
+                                    <button id="thirdBarangay" class="btn btn-info"> ALLOCATE</button>
+                                </th>
                             </tr>
                             </tbody>
                         </table>
+
+                        <button id="sendStubs" type="button" class="btn btn-success"><i
+                                class="fas fa-paper-plane"></i> Send Stubs
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="row">
+                    <div id="deploymentSummary">
+                        <div class="labels">
+                            <h2>Deployment Summary</h2>
+                            <p> Schedule: </p>
+                            <p> Site: </p>
+                            <p> Brand: </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row healthDistrict">
+                    <div id="deploymentQueue">
+                        <div class="labels">
+                            <h2>Deployment Queue</h2>
+                            <p> QUEZON HILL HEALTH DISTRICT CENTER - Deployment 4</p>
+                            <p> IRISAN HEALTH DISTRICT CENTER - Deployment 5</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="barangayModal" class="modal-window">
+                <div class="content-modal">
+                    <div class="modal-header">
+                        <!--Name of the Health center associated with the barangay under-->
+                        <h3> ATAB HEALTH DISTRICT CENTER - Deployment 1 </h3>
+                        <span id="closeModal" class="close">&times;</span>
                     </div>
 
-                </div>
-                <div class="modal-footer">
-                    <button type="button" id="submit" class="btn btn-primary"> Done </button>
+                    <div class="modal-body">
+                        <div class="stubNumbersContainer">
+                            <div class="row">
+                                <div class="col">
+                                    <center><h6> BARANGAY LIST </h6></center>
+                                </div>
+                                <div class="col">
+                                    <center><h6> Enter the number of stubs per Category</h6></center>
+                                </div>
+                            </div>
+                            <table class="table table-borderless">
+                                <thead>
+                                <tr>
+                                    <th scope="col">Covered Barangays</th>
+                                    <th scope="col">A1</th>
+                                    <th scope="col">A2</th>
+                                    <th scope="col">A3</th>
+                                    <th scope="col">A4</th>
+                                    <th scope="col">A5</th>
+                                    <th scope="col">A6</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <th scope="row"> Bakakeng Norte</th>
+                                    <td><input type="number" min="0" max="100"></td>
+                                    <td><input type="number" min="0" max="100"></td>
+                                    <td><input type="number" min="0" max="100"></td>
+                                    <td><input type="number" min="0" max="100"></td>
+                                    <td><input type="number" min="0" max="100"></td>
+                                    <td><input type="number" min="0" max="100"></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"> Bakakeng Central</th>
+                                    <td><input type="number" min="0" max="100"></td>
+                                    <td><input type="number" min="0" max="100"></td>
+                                    <td><input type="number" min="0" max="100"></td>
+                                    <td><input type="number" min="0" max="100"></td>
+                                    <td><input type="number" min="0" max="100"></td>
+                                    <td><input type="number" min="0" max="100"></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"> Bakakeng Sur</th>
+                                    <td><input type="number" min="0" max="100"></td>
+                                    <td><input type="number" min="0" max="100"></td>
+                                    <td><input type="number" min="0" max="100"></td>
+                                    <td><input type="number" min="0" max="100"></td>
+                                    <td><input type="number" min="0" max="100"></td>
+                                    <td><input type="number" min="0" max="100"></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" id="submit" class="btn btn-primary"> Done</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<script>
-    // barangay buttons
-    var firstBarangay = document.getElementById("firstBarangay");
+    <script>
+        // barangay buttons
+        var firstBarangay = document.getElementById("firstBarangay");
 
-    //modals
-    var barangayModal = document.getElementById("barangayModal");
+        //modals
+        var barangayModal = document.getElementById("barangayModal");
 
-    // exit modals
-    var exitModal = document.getElementById("closeModal");
-    var doneModal = document.getElementById("submit")
+        // exit modals
+        var exitModal = document.getElementById("closeModal");
+        var doneModal = document.getElementById("submit")
 
-    firstBarangay.onclick = function () {
-        barangayModal.style.display = "block";
-    }
+        firstBarangay.onclick = function () {
+            barangayModal.style.display = "block";
+        }
 
-    // exit or close
-    exitModal.onclick = function () {
-        barangayModal.style.display = "none";
-    }
+        // exit or close
+        exitModal.onclick = function () {
+            barangayModal.style.display = "none";
+        }
 
-    doneModal.onclick = function () {
-        barangayModal.style.display = "none";
-    }
+        doneModal.onclick = function () {
+            barangayModal.style.display = "none";
+        }
 
-</script>
+    </script>
 </body>
 </html>
